# verifying-query-logs-from-unknown-sources

./: .gitignore  README.md  dataset-properties.md  experiments.md
literature/query_analysis/query_intent_classification/: intent_classification.txt
literature/query_analysis/topic_classification/manuell/: beitzel04.txt
organization/: writing-tips.txt
plots/Wasserstein-Distances-Lengths/: all.pgf
plots/aql-character-count-frequencies-words-2006/: aql.pgf
plots/aql-character-count-frequencies-words-old-years/: aql.pgf
plots/character-count-frequencies-named-entities-and-character-count-frequencies-words/: all.pgf
plots/character-count-frequencies-named-entities-and-word-count-frequencies-named-entities/: all.pgf
plots/character-count-frequencies-queries/: all.pgf  aql.pgf
plots/character-count-frequencies-words/: aol-domains-cleaned.pgf  aol.pgf
plots/character-count-frequencies-words-and-entity-count-frequencies-queries/: all.pgf
plots/extract-named-entities/: all.pgf
plots/extract-named-entities-and-extract-words/: all.pgf
plots/extract-named-entities-and-extract-words-single/: all.pgf
plots/extract-words/: all.pgf
plots/group-presidio-pii/: all.pgf
plots/query-frequencies-and-extract-chars/: all.pgf
plots/query-frequencies-and-extract-chars-single/: all.pgf
plots/query-intent/: all.pgf
plots/query-length-chars/: all.pgf
plots/updated_plots/character-count-frequencies-words-and-entity-count-frequencies-queries/: all.pgf
plots/updated_plots/extract-chars-single/: all.pgf
plots/updated_plots/extract-named-entities-and-extract-words-single/: all.pgf
plots/updated_plots/query-frequencies-and-extract-chars-single/: all.pgf
plots/updated_plots/word-count-frequencies-queries-and-word-count-frequencies-named-entities/: all.pgf
plots/word-count-frequencies-queries/: all.pgf
plots/word-count-frequencies-queries-and-entity-count-frequencies-queries/: all.pgf
plots/word-count-frequencies-queries-and-word-count-frequencies-named-entities/: all.pgf
src/: explore.py  load_results.py  pyproject.toml  ray-runtime-env-presidio.yml  ray-runtime-env.yml  read_aol.py  read_gz.py  schedule.sh  spark_local2.py  sparktest.py  test.py  test1.py  vortrag_plots.ipynb
src/ot-embeddings/: analysis.py
src/preprocess/: clean.py  filter_language.py  preprocess_orcas.py
src/process-results/: inference_studies.ipynb  preprocess.ipynb  vis_post_thesis_submit.ipynb
src/thesis_schneg/: __main__.py  aggregate.py  analysis.py  annual_deduplicate.py  avg_query.py  classification.py  classification_module.py  cluster.py  descr_stats_studies.ipynb  get_duplication_results.py  hypothesis_testing.ipynb  hypothesis_testing_chi2.ipynb  inference_studies.ipynb  inspect_results.ipynb  intent_classification.py  invoke_wasserstein.py  model.py  parallel_sum.py  preprocess.ipynb  preprocess_google_trends.py  preprocess_orcas.py  presidio_analyse.py  prototype.py  question_classifier.py  read_aql_error.py  read_data_write_parquet.py  read_json.py  read_json_copy.py  read_parquet.py  read_parquet_copy.py  read_result.py  read_write_aql.py  results.py  spam_detection.py  spark_local.py  standardize_datasets.py  syntactic_stats_studies.ipynb  temporal_analysis.ipynb  test.py  test_ray.py  (+15 more)
src/thesis_schneg/post_thesis_analysis/: annual_deduplicate.py  embeddings_analysis.py  get_distances.sh  get_duplication_results.py
thesis/: .gitignore  analysis.tex  appendixA.tex  background.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  comment.cut  conclusion.tex  datasets.tex  evaluation.tex  introduction.tex  literature.bib  thesis.tex  webisthesis.cls
thesis/material/: writing-tips.txt
thesis/plots/extract-named-entities/: all.pgf
thesis/plots/query-length-chars/: aol.pgf
thesis/plots/zipfs-law-chars/: all.pgf
utility/: check-safetensor.py  torch-2-safetensor.py
